--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
-   "name": "Demo_JavaScript",
+   "name": "Protractor-end-to-end-test-framework",
    "private": true,
    "dependencies": {
-      "protractor": "^5.4.2",
-      "moment": "2.24.0",
-      "jasmine-allure-reporter": "1.0.2"
+      "@babel/core": "^7.9.0",
+      "@babel/plugin-proposal-class-properties": "^7.8.3",
+      "@babel/plugin-transform-arrow-functions": "^7.8.3",
+      "@babel/preset-env": "^7.9.5",
+      "@babel/register": "^7.9.0",
+      "dotenv": "^8.2.0",
+      "jasmine-allure-reporter": "^1.0.2",
+      "log4js": "^6.2.1",
+      "moment": "^2.24.0",
+      "protractor": "^5.4.2"
    },
    "scripts": {
-      "test": "protractor config.js"
+      "test": "webdriver-manager start --standalone && protractor config.js"
+   },
+   "devDependencies": {
+      "eslint": "^6.8.0",
+      "eslint-plugin-protractor": "^2.1.1"
    }
 }
