--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
       "protractor": "^5.4.2"
    },
    "scripts": {
-      "test": "webdriver-manager start --standalone && protractor config.js"
+      "test": "protractor config.js",
+      "webdriver:update": "webdriver-manager update",
+		"webdriver:start": "webdriver-manager start",
+      "lint": "eslint src/**/*.js"
+      
    },
    "devDependencies": {
       "eslint": "^6.8.0",
